# tbd_ros_msgs

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
action/: faceAnimation.action  faceEmotion.action  gazeAt.action  moveTo.action  speakTo.action
msg/: Actor.msg  Agent.msg  FaceAnimationObject.msg  HumanBody.msg  HumanBodyArray.msg  HumanJoint.msg  InteractionSpace.msg  InteractionSpaceArray.msg
